// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screens/custom_status_suggestion should match snapshot 1`] = `
<TouchableOpacity
  onPress={[Function]}
  testID="custom_status_suggestion.In a meeting"
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "flexDirection": "row",
        "minHeight": 50,
      }
    }
  >
    <Text
      style={
        {
          "color": "#3f4350",
          "height": 46,
          "left": 14,
          "marginRight": 6,
          "top": 12,
          "width": 45,
        }
      }
    >
      <Connect(Emoji)
        emojiName="calendar"
        size={20}
      />
    </Text>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "paddingBottom": 14,
            "paddingTop": 14,
            "width": "70%",
          }
        }
      >
        <View>
          <CustomStatusText
            text="In a meeting"
            textStyle={
              {
                "color": "#3f4350",
              }
            }
            theme={
              {
                "awayIndicator": "#ffbc1f",
                "buttonBg": "#1c58d9",
                "buttonColor": "#ffffff",
                "centerChannelBg": "#ffffff",
                "centerChannelColor": "#3f4350",
                "codeTheme": "github",
                "dndIndicator": "#d24b4e",
                "errorTextColor": "#d24b4e",
                "linkColor": "#386fe5",
                "mentionBg": "#ffffff",
                "mentionColor": "#1e325c",
                "mentionHighlightBg": "#ffd470",
                "mentionHighlightLink": "#1b1d22",
                "newMessageSeparator": "#cc8f00",
                "onlineIndicator": "#3db887",
                "sidebarBg": "#1e325c",
                "sidebarHeaderBg": "#192a4d",
                "sidebarHeaderTextColor": "#ffffff",
                "sidebarTeamBarBg": "#14213e",
                "sidebarText": "#ffffff",
                "sidebarTextActiveBorder": "#5d89ea",
                "sidebarTextActiveColor": "#ffffff",
                "sidebarTextHoverBg": "#28427b",
                "sidebarUnreadText": "#ffffff",
                "type": "Denim",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`screens/custom_status_suggestion should match snapshot with separator and clear button 1`] = `
<TouchableOpacity
  onPress={[Function]}
  testID="custom_status_suggestion.In a meeting"
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "flexDirection": "row",
        "minHeight": 50,
      }
    }
  >
    <Text
      style={
        {
          "color": "#3f4350",
          "height": 46,
          "left": 14,
          "marginRight": 6,
          "top": 12,
          "width": 45,
        }
      }
    >
      <Connect(Emoji)
        emojiName="calendar"
        size={20}
      />
    </Text>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "paddingBottom": 14,
            "paddingTop": 14,
            "width": "70%",
          }
        }
      >
        <View>
          <CustomStatusText
            text="In a meeting"
            textStyle={
              {
                "color": "#3f4350",
              }
            }
            theme={
              {
                "awayIndicator": "#ffbc1f",
                "buttonBg": "#1c58d9",
                "buttonColor": "#ffffff",
                "centerChannelBg": "#ffffff",
                "centerChannelColor": "#3f4350",
                "codeTheme": "github",
                "dndIndicator": "#d24b4e",
                "errorTextColor": "#d24b4e",
                "linkColor": "#386fe5",
                "mentionBg": "#ffffff",
                "mentionColor": "#1e325c",
                "mentionHighlightBg": "#ffd470",
                "mentionHighlightLink": "#1b1d22",
                "newMessageSeparator": "#cc8f00",
                "onlineIndicator": "#3db887",
                "sidebarBg": "#1e325c",
                "sidebarHeaderBg": "#192a4d",
                "sidebarHeaderTextColor": "#ffffff",
                "sidebarTeamBarBg": "#14213e",
                "sidebarText": "#ffffff",
                "sidebarTextActiveBorder": "#5d89ea",
                "sidebarTextActiveColor": "#ffffff",
                "sidebarTextHoverBg": "#28427b",
                "sidebarUnreadText": "#ffffff",
                "type": "Denim",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "rgba(63,67,80,0.2)",
            "height": 1,
            "marginRight": 16,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;
